# src/controllers/otp/otp.schema.js
@@ -1,8 +1,0 @@
-import { Schema, model } from "mongoose";
-
-const otpSchema = new Schema({
-  verification_code: { type: String, },
-  otp_expires: { type: Date },
-}, { timestamps: true });
-
-export const OTP = model("OTP", otpSchema);
